--- a/css/content.css
+++ b/css/content.css
@@ -1,4 +1,5 @@
 .concentrate {
+  box-sizing: border-box;
   display: none;
   color: #242424;
   background-color: #242424;
@@ -15,6 +16,7 @@
   opacity: 0.3;
 }
 .remaining {
+  box-sizing: border-box;
   display: block;
   color: #333 !important;
   font-size: 300%;
@@ -23,7 +25,7 @@
   width: 200px;
   text-align: center;
   top: 50%;
-  left: 45%;
+  margin-left: 33%;
   user-select: none;
   pointer-events: none;
 }
