--- a/css/content.css
+++ b/css/content.css
@@ -25,7 +25,7 @@
   width: 200px;
   text-align: center;
   top: 50%;
-  margin-left: 33%;
+  margin-left: 0 auto;
   user-select: none;
   pointer-events: none;
 }
