--- a/css/index.css
+++ b/css/index.css
@@ -1,83 +1,84 @@
 body {
-    background-color: #242424;
-    color: gray;
-    font-size: 110%;    
+  background-color: #242424;
+  color: gray;
+  font-size: 110%;
+  min-width: 170px;
 }
 
 h3 {
-    color: #43acff;
-    margin: 5px;
+  color: #43acff;
+  margin: 5px;
 }
 
 .switch {
-    position: relative;
-    display: inline-block;
-    width: 60px;
-    height: 34px;
+  position: relative;
+  display: inline-block;
+  width: 60px;
+  height: 34px;
 }
 
 .switch input {
-    opacity: 0;
-    width: 0;
-    height: 0;
+  opacity: 0;
+  width: 0;
+  height: 0;
 }
 
 .slider {
-    position: absolute;
-    cursor: pointer;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    background-color: gray;
-    -webkit-transition: .2s;
-    transition: .2s;
+  position: absolute;
+  cursor: pointer;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: gray;
+  -webkit-transition: 0.2s;
+  transition: 0.2s;
 }
 
 .slider:before {
-    position: absolute;
-    content: "";
-    height: 26px;
-    width: 26px;
-    left: 4px;
-    bottom: 4px;
-    background-color: white;
-    -webkit-transition: .2s;
-    transition: .2s;
+  position: absolute;
+  content: "";
+  height: 26px;
+  width: 26px;
+  left: 4px;
+  bottom: 4px;
+  background-color: white;
+  -webkit-transition: 0.2s;
+  transition: 0.2s;
 }
 
-input:checked+.slider {
-    background-color: #2196F3;
+input:checked + .slider {
+  background-color: #2196f3;
 }
 
-input:focus+.slider {
-    box-shadow: 0 0 1px #2196F3;
+input:focus + .slider {
+  box-shadow: 0 0 1px #2196f3;
 }
 
-input:checked+.slider:before {
-    -webkit-transform: translateX(26px);
-    -ms-transform: translateX(26px);
-    transform: translateX(26px);
+input:checked + .slider:before {
+  -webkit-transform: translateX(26px);
+  -ms-transform: translateX(26px);
+  transform: translateX(26px);
 }
 
 .slider.round {
-    border-radius: 34px;
+  border-radius: 34px;
 }
 
 .slider.round:before {
-    border-radius: 50%;
+  border-radius: 50%;
 }
 
-input { 
-    background-color: gray;
-    padding: 4px 5px;
-    font-size: 120%;
-    text-align: center;
+input {
+  background-color: gray;
+  padding: 4px 5px;
+  font-size: 120%;
+  text-align: center;
 }
 
-.color-indicator {    
-    height: 75px; 
-    width: auto;
-    border-radius: 1px;
-    margin: 5px auto;
+.color-indicator {
+  height: 75px;
+  width: auto;
+  border-radius: 1px;
+  margin: 5px auto;
 }
