--- a/css/index.css
+++ b/css/index.css
@@ -3,7 +3,12 @@
   --dark: #7555c4;
   --lighter: #8187ce;
   --alt: #4da996;
+  --slider-speed: 0.4s;
 }
+
+/* * {
+  box-sizing: border-box;
+} */
 
 html {
   height: 200px;
@@ -16,7 +21,10 @@ body {
   min-width: 170px;
 }
 
-h3 {
+h1,
+h2,
+h3,
+h4 {
   color: var(--darker);
   margin: 5px;
 }
@@ -42,8 +50,8 @@ h3 {
   right: 0;
   bottom: 0;
   background-color: gray;
-  -webkit-transition: 0.2s;
-  transition: 0.2s;
+  -webkit-transition: var(--slider-speed);
+  transition: var(--slider-speed);
 }
 
 .slider:before {
@@ -54,8 +62,8 @@ h3 {
   left: 4px;
   bottom: 4px;
   background-color: white;
-  -webkit-transition: 0.2s;
-  transition: 0.2s;
+  -webkit-transition: var(--slider-speed);
+  transition: var(--slider-speed);
 }
 
 input:checked + .slider {
@@ -89,16 +97,24 @@ input:checked + .slider:before {
 }
 
 input {
-  background-color: gray;
-  padding: 4px 5px;
+  background-color: var(--alt);
+  padding: 8px 5px;
   font-size: 120%;
   text-align: center;
+  border-radius: 10px;
+  border: solid 1px var(--darker);
+  transition: all var(--slider-speed);
+}
+
+input:focus {
+  outline: none;
+  border: solid 1px var(--dark);
 }
 
 .color-indicator {
-  height: 75px;
+  height: 142px;
   width: auto;
-  border-radius: 1px;
+  border-radius: 10px;
   margin: 5px auto;
 }
 
@@ -173,10 +189,67 @@ input {
   font-size: 80%;
 }
 
+.noselect {
+  user-select: none;
+}
+
+.center {
+  height: 50vw;
+  text-align: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
 .hide {
   display: none;
 }
 
-.noselect {
-  user-select: none;
+.lighten {
+  filter: brightness(150%);
+}
+
+.card {
+  max-width: 320px;
+  height: 110px;
+  width: 100%;
+  padding: 1rem;
+  background-color: #fff;
+  box-shadow: 0 1px 4px rgba(0, 0, 0, 0.1);
+  border-radius: 0.33rem;
+  padding: 1rem;
+}
+
+.content-placeholder {
+  animation: linear 1s placeHolderShimmer infinite;
+  background: #f6f7f8;
+  background: linear-gradient(to right, #eeeeee 8%, #dddddd 18%, #eeeeee 33%);
+  background-size: 800px 104px;
+
+  width: 100%;
+  height: 100%;
+  -webkit-clip-path: url(#svgPath);
+  clip-path: url(#svgPath);
+
+  transform: translateZ(0);
+}
+
+@keyframes placeHolderShimmer {
+  0% {
+    background-position: -468px 0;
+  }
+  100% {
+    background-position: 468px 0;
+  }
+}
+
+.flex {
+  display: flex;
+  justify-content: space-evenly;
+  height: 100%;
+  text-align: center;
+}
+
+.visual {
+  height: 200px;
 }
