--- a/css/index.css
+++ b/css/index.css
@@ -270,3 +270,9 @@ input:focus {
   font-size: 1.1rem;
   user-select: none;
 }
+
+.speed {
+  margin-top: -20px;
+  height: 30px;
+  font-size: xx-large;
+}
