--- a/css/index.css
+++ b/css/index.css
@@ -117,6 +117,7 @@ input:focus {
   width: auto;
   border-radius: 10px;
   margin: 5px auto;
+  transition: all var(--slider-speed);
 }
 
 .divider {
