--- a/css/content.css
+++ b/css/content.css
@@ -1,18 +1,16 @@
 .concentrate {
+  position: fixed;
   box-sizing: border-box;
   display: none;
   color: #242424;
   background-color: #242424;
   opacity: 1;
   z-index: 9999;
-  position: fixed;
   height: 100%;
   width: 100%;
-  top: 0;
-  left: 0;
-  transition: all 0.3s;
   justify-content: center;
   align-items: center;
+  transition: all 0.3s;
 }
 .concentrate:hover {
   opacity: 0.3;
@@ -27,7 +25,7 @@
   text-align: center;
   user-select: none;
   pointer-events: none;
-  margin-top: 25px;
+  margin-top: 10vh;
 }
 
 #power,
